	* Strength bonus for two-handed weaponry is doubled. (from SporkHack)
	* Tins made from giant turtles are delicious and nutritious (by Bernard Helyer)

	* Gauntlets of power give +7 damage bonus to differentiate
	  from 18/** (from SporkHack)

	* user interface improvements:
	  - Monster Targeting v1.2 (by Pasi Kallinen)
	  - Changed 'C' to present a menu (from NAO)

	* bug fixes:
	  - Fixed crash when player polyed into gold dragon because of wearing
	    a gold dragon armor and a bones file gets written and the gold
	    armor gets removed during bones trimming

2011-10-08  UnNetHack 3.6.0
	* changing color of monster with config line:
	  MONSTERCOLOR=acid blob:lightcyan
	* HTML dump: output IBMgraphics and DECgraphics characters
	* Multiple bones files per level (not on Win32)
	* Autoconf compliant installation directory variables
	* added new tiles and fixed building of 16x16 tiles (by Stephan T. Lavavej)
	* Curses GUI updated to last version
	* Giantslayer grants STR 18/** when wielded
	* Simple hint mode
	* New config option for changing order of spells in spell menu:
	  SPELLORDER=ZzqwertuiopasdfghjklyxcvbnmQWERTUIOPASDFGHJKLYXCVBNM
	* Hallucination: fictional currencies

	* more candles:
	  - lighting shop in orcus town
	  - Gnomes get candles (more likely in dark mines) (from AceHack)

	* patches:
	  - DYWYPISI? (adds identification details to dump) (by Jafet)
	  - Grudge (some NPC monsters attacking each other) (by Nephi)
	  - MSGTYPE option (by Pasi Kallinen)
	  - Sortloot (by Jukka Lahtinen)
	    * changed to sort by description, BUC and more
	  - Quiver Fired Ammunition (by Jukka Lahtinen)

	* user interface improvements:
	  - Autoexplore (from AceHack)
	  - New category menu option: "Unidentified items"
	  - 'X' toggles twoweaponing, explore mode is on alt-x resp. #xplore
	  - BUC items inside containers dropped on altars (from AceHack)
	  - stairs leading to branches are colored yellow